--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "socket.io": "^4.4.0"
+    "knex": "^0.95.14",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.4.0",
+    "sqlite3": "^5.0.2"
   }
 }
